# IPST

./: README.md
docs/plans/: 2026-02-18-data-prep-workshop-design.md  2026-02-18-data-prep-workshop-implementation.md
workshop/: README.md  pyproject.toml
workshop/data/samples/: create_sample_data.py  thai_sample.md  thai_sample.pptx  thai_sample_docling.json
workshop/notebooks/: 01_document_extraction.ipynb  02_cleaning_and_chunking.ipynb  03_llm_structuring.ipynb  04_final_datasets.ipynb
