[project]
name = "data-prep-workshop"
version = "0.1.0"
description = "Workshop: การเตรียมและจัดโครงสร้างข้อมูลสำหรับสอนโมเดล"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.70",
    "ollama>=0.4",
    "pythainlp>=5.0",
    "sentence-transformers>=3.0",
    "pandas>=2.1",
    "tqdm>=4.65",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "tabulate>=0.9",
    "nbformat>=5.9",
    "fpdf2>=2.8.5",
]
